Struct setter's parameters == `[:req, :_]`

fix [Bug #18405]

Note that the parameter name `_` is not a spec, so we shouldn't
rely on this behavior.